# 2DEngine_OpenGL

./: .gitmodules  CMakeLists.txt
Assets/shaders/: sprite.fragment
Engine/: CMakeLists.txt
Engine/common/: camera.cc  camera.h  engine.cc  engine.h  entity.h  sprite.cc  sprite.h
Engine/render/: gl_render.cc  gl_render.h  gl_texture.cc  gl_texture.h  render_program.cc  render_program.h
Engine/ui/: properties_viewport.cc  scene_graph_viewport.cc  scene_viewport.cc  scene_viewport.h  ui.cc  ui.h  viewport.h
